--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -21,5 +21,5 @@
   <link rel="shortcut icon" href="{{ `images/favicon.png` | absURL }} " type="image/x-icon">
   <link rel="icon" href="{{ `images/favicon.png` | absURL }} " type="image/x-icon">
 
-  {{ partials "google/analytics" . }}
+  {{ partials "adsense" . }}
 </head>
