--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <title>{{ .Site.Title }}</title>
 
-  {{ partials "adsense" . }}
+  {{ partials "google/adsense" . }}
 
   {{ "<!-- mobile responsive meta -->" | safeHTML }}
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
