--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -40,9 +40,9 @@
 
 
 {{ if .Site.Params.search }}
-<script>
+<!-- <script>
   var indexURL = {{ "index.json" | absURL }}
-</script>
+</script> -->
 {{ end }}
 
 {{ "<!-- JS Plugins -->" | safeHTML }}
