--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -7,7 +7,10 @@
         <h2 class="mb-4">{{.Title }}</h2>
         <img src="{{.Params.Image | absURL }}" alt="{{.Site.Params.author}}" class="img-fluid w-100 mb-4">
         {{ .Content }}
-        <form action="{{ .Site.Params.contact_form_action }}" class="row mt-5">
+        <form action="{{ .Site.Params.contact_form_action }}" class="row mt-5" method="POST" netlify-honeypot="hpfield" netlify>
+          <div class="hpot">
+            <label>Leave this field empty: <input name="hpfield"></label>
+          </div>
           <div class="col-lg-6">
             <input type="text" class="form-control mb-4" name="name" id="name" placeholder="Name">
           </div>
@@ -29,3 +32,12 @@
 {{partial "instafeed.html" . }}
 
 {{ end }}
+
+<form name="comments" method="POST" netlify-honeypot="hpfield" netlify>
+  <div class="hpot">
+    <label>Leave this field empty: <input name="hpfield"></label>
+  </div>
+  <label>Comments:
+    <textarea name="comments"></textarea>
+  </label>
+</form>
