--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -7,7 +7,7 @@
         <h2 class="mb-4">{{.Title }}</h2>
         <img src="{{.Params.Image | absURL }}" alt="{{.Site.Params.author}}" class="img-fluid w-100 mb-4">
         {{ .Content }}
-        <form action="{{ .Site.Params.contact_form_action }}" class="row mt-5" name="contact" method="POST" netlify-honeypot="hpfield" netlify>
+        <form class="row mt-5" name="contact" method="POST" netlify-honeypot="hpfield" netlify>
           <div class="hpot">
             <label>Leave this field empty: <input name="hpfield"></label>
           </div>
@@ -33,11 +33,11 @@
 
 {{ end }}
 
-<form name="comments" method="POST" netlify-honeypot="hpfield" netlify>
+<!-- <form name="comments" method="POST" netlify-honeypot="hpfield" netlify>
   <div class="hpot">
     <label>Leave this field empty: <input name="hpfield"></label>
   </div>
   <label>Comments:
     <textarea name="comments"></textarea>
   </label>
-</form>
+</form> -->
