--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -7,7 +7,8 @@
         <h2 class="mb-4">{{.Title }}</h2>
         <img src="{{.Params.Image | absURL }}" alt="{{.Site.Params.author}}" class="img-fluid w-100 mb-4">
         {{ .Content }}
-        <form class="row mt-5" name="contact" method="POST" netlify-honeypot="hpfield" netlify>
+        <form class="row mt-5" >
+          <!-- name="contact" method="POST" netlify-honeypot="hpfield" netlify -->
           <div class="hpot">
             <label>Leave this field empty: <input name="hpfield"></label>
           </div>
