--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -5,26 +5,9 @@
     <div class="row">
       <div class="col-lg-12">
         <h2 class="mb-4">{{.Title }}</h2>
-        <img src="{{.Params.Image | absURL }}" alt="{{.Site.Params.author}}" class="img-fluid w-100 mb-4">
+        <!-- <img src="{{.Params.Image | absURL }}" alt="{{.Site.Params.author}}" class="img-fluid w-100 mb-4"> -->
         {{ .Content }}
-        <form class="row mt-5" >
-          <!-- name="contact" method="POST" netlify-honeypot="hpfield" netlify -->
-          <div class="hpot">
-            <label>Leave this field empty: <input name="hpfield"></label>
-          </div>
-          <div class="col-lg-6">
-            <input type="text" class="form-control mb-4" name="name" id="name" placeholder="Name">
-          </div>
-          <div class="col-lg-6">
-            <input type="email" class="form-control mb-4" name="email" id="email" placeholder="Email">
-          </div>
-          <div class="col-12">
-            <textarea name="message" id="message" class="form-control mb-4" placeholder="Message..."></textarea>
-          </div>
-          <div class="col-12">
-            <button class="btn btn-primary">Submit</button>
-          </div>
-        </form>
+        
       </div>
     </div>
   </div>
@@ -33,12 +16,3 @@
 {{partial "instafeed.html" . }}
 
 {{ end }}
-
-<!-- <form name="comments" method="POST" netlify-honeypot="hpfield" netlify>
-  <div class="hpot">
-    <label>Leave this field empty: <input name="hpfield"></label>
-  </div>
-  <label>Comments:
-    <textarea name="comments"></textarea>
-  </label>
-</form> -->
