--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -5,7 +5,7 @@
     <div class="row">
       <div class="col-lg-12">
         <h2 class="mb-4">{{.Title }}</h2>
-        <img src="{{.Params.Image | absURL }}" alt="{{.Site.Params.author}}" class="img-fluid w-100 mb-4">
+        <!-- <img src="{{.Params.Image | absURL }}" alt="{{.Site.Params.author}}" class="img-fluid w-100 mb-4"> -->
         {{ .Content }}
         <form class="row mt-5" name="contact" method="POST" netlify-honeypot="hpfield" netlify>
           
