--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -8,20 +8,21 @@
         <div class="col-md-3 col-sm-6 mb-4 mb-md-0">
           <h6>BEHF</h6>
           <ul class="list-unstyled">
-            <!-- <li class="font-secondary text-dark">{{.Site.Params.address | markdownify }}</li> -->
             <li class="font-secondary text-dark"><a href="/categories/health/">Health</a></li>
             <li class="font-secondary text-dark"><a href="/categories/food/">Food</a></li>
             <li class="font-secondary text-dark"><a href="/categories/travel/">Travel</a></li>
             <li class="font-secondary text-dark"><a href="/categories/life/">Life</a></li>
           </ul>
         </div>
-        <!-- <div class="col-md-3 col-sm-6 mb-4 mb-md-0">
-          <h6>Contact Info</h6>
+        <div class="col-md-3 col-sm-6 mb-4 mb-md-0">
+          <h6>About</h6>
           <ul class="list-unstyled">
-            <li class="font-secondary text-dark">Tel : {{ .Site.Params.mobile | markdownify }}</li>
-            <li class="font-secondary text-dark">Email : {{ .Site.Params.email | markdownify }}</li>
+            <li class="font-secondary text-dark"><a href="/about">About</a></li>
+            <li class="font-secondary text-dark"><a href="/contact">Contact</a></li>
+            <li class="font-secondary text-dark"><a href="/privacy">Privacy</a></li>
+            <li class="font-secondary text-dark"><a href="/terms">Terms</a></li>
           </ul>
-        </div> -->
+        </div>
         <div class="col-md-3 col-sm-6 mb-4 mb-md-0">
           <h6>Follow</h6>
           <ul class="list-inline d-inline-block">
