--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -334,7 +334,8 @@ a.text-dark:hover {
 }
 
 .bg-secondary {
-  background: #fdefe6 !important;
+  background: #f8f9fa !important;
+
 }
 
 .text-primary {
