--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,10 +2,10 @@
   <div class="section">
     <div class="container">
       <div class="row">
-        <div class="col-md-3 col-sm-6 mb-4 mb-md-0">
+        <div class="col-md-3 col-sm-6 mb-3 mb-md-0">
           <a href="{{.Site.BaseURL}}"><img class="logo" src="{{.Site.Params.logo | absURL }}" alt="{{.Site.Title}}" class="img-fluid"></a>
         </div>
-        <div class="col-md-3 col-sm-6 mb-4 mb-md-0">
+        <div class="col-md-3 col-sm-6 mb-3 mb-md-0">
           <h6>BEHF</h6>
           <ul class="list-unstyled">
             <li class="font-secondary text-dark"><a href="/categories/health/">Health</a></li>
@@ -14,7 +14,7 @@
             <li class="font-secondary text-dark"><a href="/categories/life/">Life</a></li>
           </ul>
         </div>
-        <div class="col-md-3 col-sm-6 mb-4 mb-md-0">
+        <div class="col-md-3 col-sm-6 mb-3 mb-md-0">
           <h6>About</h6>
           <ul class="list-unstyled">
             <li class="font-secondary text-dark"><a href="/about">About</a></li>
@@ -23,14 +23,14 @@
             <li class="font-secondary text-dark"><a href="/terms">Terms</a></li>
           </ul>
         </div>
-        <div class="col-md-3 col-sm-6 mb-4 mb-md-0">
+        <!-- <div class="col-md-3 col-sm-6 mb-4 mb-md-0">
           <h6>Follow</h6>
           <ul class="list-inline d-inline-block">
             {{ range .Site.Params.social }}
             <li class="list-inline-item"><a href="{{ .URL }}" class="text-dark"><i class="{{ .icon }}"></i></a></li>
             {{ end }}
           </ul>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
