--- a/layouts/partials/cookie-notice.html
+++ b/layouts/partials/cookie-notice.html
@@ -8,4 +8,4 @@
       Okay
     </button>
   </div>
-  <script src="/my_js/cookie.js"></script>
+  <!-- <script src="/my_js/cookie.js"></script> -->
