--- a/layouts/partials/cookie-notice.html
+++ b/layouts/partials/cookie-notice.html
@@ -2,7 +2,7 @@
     <p>
       We use cookies on this website to give you the best experience on our
       site and show you relevant ads. To find out more, read our
-      <a href="/privacy/">privacy policy</a> and <a href="/terms/">terms=</a>.
+      <a href="/privacy/">privacy policy</a> and <a href="/terms/">terms</a>.
     </p>
     <button class="cookie-btn">
       Okay
