--- a/layouts/partials/google/adsense.html
+++ b/layouts/partials/google/adsense.html
@@ -1,2 +1,2 @@
-<script data-ad-client="ca-pub-6662288593214393" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- <script data-ad-client="ca-pub-6662288593214393" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
 <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158247351-1"></script> -->
