--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,9 +1,20 @@
 {{ define "main" }}
 
-<meta property="og:type" content="website" />
+<!-- <meta property="og:type" content="website" />
 <meta property="og:title" content="{{ .Params.Title }}"/>
-<meta property="og:image" content="http://www.besteverydayhealthandfitness.com.com/{{ .Params.Image | relURL }}"/>
+<meta property="og:image" content="http://www.besteverydayhealthandfitness.com.com/{{ .Params.Image | relURL }}"/> -->
 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- BEHF 1 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-6662288593214393"
+     data-ad-slot="1399967495"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 <!-- page-title -->
 <section class="section bg-secondary">
