--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,4 +1,17 @@
 <header class="navigation">
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <!-- BEHF 1 -->
+  <ins class="adsbygoogle"
+       style="display:block"
+       data-ad-client="ca-pub-6662288593214393"
+       data-ad-slot="1399967495"
+       data-ad-format="auto"
+       data-full-width-responsive="true"></ins>
+  <script>
+       (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
+
   <nav class="navbar navbar-expand-lg navbar-light">
     <a class="navbar-brand" href="{{.Site.BaseURL}}"><img class="img-fluid logo" src="{{ .Site.Params.logo | absURL }}" alt="{{.Site.Title}}"></a>
     <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navogation"
