--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -5,6 +5,18 @@
       <input class="form-control border-0 pl-5" type="search" placeholder="Search" id="search-query" name="s">
     </form>
   </div> -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- BEHF 2 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-6662288593214393"
+     data-ad-slot="3484039508"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
   <div class="widget">
     <h6 class="mb-4">LATEST POST</h6>
     {{ range first 3 ( where .Site.Pages "Type" "post") }}
